--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Forside</a></li>
-                <li><a href="produkt.html">Produkt</a></li>
+                <li><a href="product.html">Produkt</a></li>
                 <li><a href="produktliste.html">Produktliste</a></li>
                 <li><a href="kategori.html">Kategori</a></li>
             </ul>
