--- a/product.html
+++ b/product.html
@@ -49,8 +49,12 @@
         <div>
             <h2>Produkt Information</h2>
 
-            <h3>Model name</h3>
-            <p>Sahara Team India Fanwear Round Neck Jersey</p>
+            <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p>
+                <span class="brand nike"></span>
+                <span>T-shirts</span>
+            </p>
+
             <h3>Color</h3>
             <p>Blue</p>
             <h3>Inventory number</h3>
@@ -86,6 +90,7 @@
 
 
     <script src="java.js"></script>
+    <script src="java/product.js"></script>
 </body>
 
 </html>
